<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Stickeroid</string>
    <string name="about_text">PiwiSoft (c) 2011-2012</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_collections">Use \'New\' menu to create a collection</string>
    <string name="menu_new_collection">New</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_edit_collection">Modify</string>
    <string name="menu_delete_collection">Delete</string>
    <string name="menu_filters">Filters</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_error">An error has occurred during backup</string>
    <string name="backup_can_t_access">Can\'t access to external storage</string>
    <string name="backup_can_t_create">Can\'t create backup directory in external storage
	</string>
    <string name="restore_completed">Restore completed</string>
    <string name="restore_error">An error has occurred during restore</string>
    <string name="delete_collection_dialog_title">Delete a collection</string>
    <string name="delete_collection_dialog_msg">Do you really want to delete this collection ?
	</string>
    <string name="new_collection_title">Create new collection</string>
    <string name="new_collection_name">Name : </string>
    <string name="new_collection_size">Size : </string>
    <string name="new_collection_confirm">Create</string>
    <string name="modify_collection_title">Modify the collection</string>
    <string name="modify_collection_confirm">Modify</string>
    <string name="edit_collection_title">Collection %s</string>
    <string name="filter_choice">Choose a filter</string>
    <string name="filter_none">None</string>
    <string name="filter_missing">Only missing</string>
    <string name="filter_duplicated">Only duplicated</string>
    <string name="restore_dialog_title">Restore collections</string>
    <string name="preferences_title">Settings</string>
    <string name="advanced_preferences">Backup</string>
    <string name="title_auto_backup_preference">Automatic backup</string>
    <string name="summary_auto_backup_preference">Do an automatic backup of a collection when a
		change has occurred.</string>
    <string name="menu_backup">Backup</string>
    <string name="backup_nothing_to_do">Nothing to backup</string>
</resources>
